- Added a (LEGACY) tag to the schrabidium transmutator
- Existing schrabidium transmutators are now way slower
   └ get souped
- Removed the schraranium tooltip mentioning the transmutator
- Changed the last remaining recipes that use the old steel pipes item, as well as the recipe for the steel pipes
   └ Any remaining steel pipes can be either smelted in a crucible or shredded
- Basalt now has cobblestone oredict
- Earth crystalline bedrock is now: Redstone - Asbestos - Diamond - Emerald
   └ This means an Earth bedrock plant can produce all basic alloys! (Steel, Red Copper, Advanced Alloy)
- Duna now spawns repairable lanterns (at double the rate of Earth!)
- Schrabidium ore generates naturally on Eve
- Ike now has rad hotspots
- Red keyholes now spawn on all planets
- Space stations now see the satellites of the currently orbited body, allowing asteroid miners to function (but only when orbiting the correct planet!)
- Extra port added to the Electrolyser
- Platinum was kill (it was unused)
- PLSS now consumes oxygen when underwater, you'll drown as normal if you run out of O2
- Removed Hodgepodge
   └ Which fixed some servers connection issues
- Removed custom machines completely
   └ Shit
- Minimap is in the top right corner by default
- Reduced weight of the modpack a little bit
- Added tooltip on inventory buttons
- The PWR and watz now have NEI handlers, showing the fuel to depleted fuel process
- Changed the way mirror linking works for the solar boiler
   └ The max range is now 100m (instead of 25m)
   └ There is now an angle requirement, mirrors cannot be rotated more than 45°
   └ This means that the solar boiler can use more mirrors, the higher up it is
   └ Existing setups will continue to function, as these rules only apply during the linking process



[Full Changelog](https://github.com/Nuclear-Tech-New-Horizons/NTNH/compare/2.0.1...2.1.0)

## Download
[GitGub](https://github.com/Nuclear-Tech-New-Horizons/NTNH/releases/tag/2.1.0)