@@ -1,8 +1,0 @@
-{
-  "questIDHigh:4": 0,
-  "questIDLow:4": 172,
-  "sizeX:3": 24,
-  "sizeY:3": 24,
-  "x:3": 288,
-  "y:3": 624
-}
