@@ -1,77 +1,0 @@
-{
-  "preRequisites:9": {
-    "0:10": {
-      "questIDHigh:4": 0,
-      "questIDLow:4": 35
-    },
-    "1:10": {
-      "questIDHigh:4": 0,
-      "questIDLow:4": 26
-    },
-    "2:10": {
-      "questIDHigh:4": 0,
-      "questIDLow:4": 60
-    },
-    "3:10": {
-      "questIDHigh:4": 0,
-      "questIDLow:4": 173
-    },
-    "4:10": {
-      "questIDHigh:4": 0,
-      "questIDLow:4": 31
-    }
-  },
-  "properties:10": {
-    "betterquesting:10": {
-      "autoClaim:1": 0,
-      "desc:8": "The Schrabidium Transmutator Device is a way to obtain Schrabidium in an easier way. A Redcoil Capacitor is needed in order for the machine to work.",
-      "globalShare:1": 0,
-      "icon:10": {
-        "Count:3": 1,
-        "Damage:2": 0,
-        "OreDict:8": "",
-        "id:8": "hbm:tile.machine_schrabidium_transmutator"
-      },
-      "isMain:1": 0,
-      "isSilent:1": 0,
-      "lockedProgress:1": 0,
-      "name:8": "Schrabidium Transmutator Device",
-      "questLogic:8": "AND",
-      "repeatTime:3": -1,
-      "repeat_relative:1": 1,
-      "simultaneous:1": 0,
-      "snd_complete:8": "random.levelup",
-      "snd_update:8": "random.levelup",
-      "taskLogic:8": "AND",
-      "visibility:8": "NORMAL"
-    }
-  },
-  "questIDHigh:4": 0,
-  "questIDLow:4": 172,
-  "rewards:9": {},
-  "tasks:9": {
-    "0:10": {
-      "autoConsume:1": 0,
-      "consume:1": 0,
-      "groupDetect:1": 0,
-      "ignoreNBT:1": 0,
-      "index:3": 0,
-      "partialMatch:1": 1,
-      "requiredItems:9": {
-        "0:10": {
-          "Count:3": 1,
-          "Damage:2": 0,
-          "OreDict:8": "",
-          "id:8": "hbm:tile.machine_schrabidium_transmutator"
-        },
-        "1:10": {
-          "Count:3": 1,
-          "Damage:2": 0,
-          "OreDict:8": "",
-          "id:8": "hbm:item.redcoil_capacitor"
-        }
-      },
-      "taskID:8": "bq_standard:retrieval"
-    }
-  }
-}
