@@ -104,6 +104,7 @@
    └ There is now an angle requirement, mirrors cannot be rotated more than 45°
    └ This means that the solar boiler can use more mirrors, the higher up it is
    └ Existing setups will continue to function, as these rules only apply during the linking process
+- Removed Schrabidium Transmutator quest
 
 
 
